adb: adding support for mtp
Android M adds support of Media Transfer Protocol (MTP) over USB.
USB device manager enables mtp by concatenating "mtp" to sys.usb.config
whenever adb is turned on or off, changing "none" to "mtp" and "adb" to
"mtp,adb".
This commit added "mtp" and "mtp,adb" rules to init.broadcomstb.usb.rc
and init.broadcomstb.usb.tcp.rc.
However, due to the hw limitations (maximum available endpoints),
725x boards cannot support both mtp and adb in the same time. As long as
the UsbDeviceManager that handles mtp transitions is in the Android
framework, the workaround is to force "mtp,adb" config to "adb" in
init.broadcomstb.usb.rc.

refs #SWANDROID-2942

Change-Id: Ie29f8250b82722da354cf8a48e1fa3ba5aee2a45
Signed-off-by: Andrey Narkevitch <andrey@broadcom.com>

--- a/prebuilt/init.broadcomstb.usb.rc
+++ b/prebuilt/init.broadcomstb.usb.rc
@@ -30,6 +30,31 @@ on property:sys.usb.config=adb
     start adbd
     setprop sys.usb.state ${sys.usb.config}
 
+on property:sys.usb.config=mtp
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/idVendor 18d1
+    write /sys/class/android_usb/android0/idProduct 4ee1
+    write /sys/class/android_usb/android0/bDeviceClass 0
+    write /sys/class/android_usb/android0/bDeviceSubClass 0
+    write /sys/class/android_usb/android0/bDeviceProtocol 0
+    write /sys/class/android_usb/android0/functions ${sys.usb.config}
+    write /sys/class/android_usb/android0/enable 1
+    setprop sys.usb.state ${sys.usb.config}
+
+on property:sys.usb.config=mtp,adb
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/idVendor 18d1
+    write /sys/class/android_usb/android0/idProduct 4ee2
+# Do not enable mtp function due to the hw limitations (mtp needs 3 EPs,
+# adb needs 2 EPs, but 725x has only 4 endpoints). Force it to adb.
+    write /sys/class/android_usb/android0/functions adb
+    write /sys/class/android_usb/android0/bDeviceClass 0
+    write /sys/class/android_usb/android0/bDeviceSubClass 0
+    write /sys/class/android_usb/android0/bDeviceProtocol 0
+    write /sys/class/android_usb/android0/enable 1
+    start adbd
+    setprop sys.usb.state ${sys.usb.config}
+
 # Used to set USB configuration at boot and to switch the configuration
 # when changing the default configuration
 on property:persist.sys.usb.config=*
