--- a/app/BcmCoverFlow/AndroidManifest.xml
+++ b/app/BcmCoverFlow/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.broadcom.CoverFlow"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:hardwareAccelerated="true" android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:hardwareAccelerated="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name">
         <activity android:name=".CoverFlowActivity"
                   android:label="@string/app_name">
             <intent-filter>
