--- a/app/BcmOtaUpdater/AndroidManifest.xml
+++ b/app/BcmOtaUpdater/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-sdk android:minSdkVersion="12" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
         <activity android:name=".BcmOtaUpdater"
                   android:label="@string/app_name">
             <intent-filter>
