--- a/app/BcmUriPlayer/AndroidManifest.xml
+++ b/app/BcmUriPlayer/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.broadcom.BcmUriPlayer"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon"
+    <application android:icon="@drawable/ic_launcher"
                  android:banner="@drawable/banner"
                  android:label="@string/app_name">
         <activity android:name=".BcmUriPlayer"
