prebuilt: adding netcoal service hook up to default init.eth.rc.
refs #SWANDROID-3081

Change-Id: Id03048c690159e8b88bd59bf3b79588ac800d1c2
Signed-off-by: Pierre Couillaud <pierre.couillaud@broadcom.com>

--- a/prebuilt/init.eth.rc
+++ b/prebuilt/init.eth.rc
@@ -12,3 +12,10 @@ service dhcpcd_gphy /system/bin/dhcpcd -dABKL
    disabled
    oneshot
 
+service netcoal /system/bin/netcoal eth0
+   class late_start
+   oneshot
+   disabled
+
+on property:dyn.nx.netcoal.set=*
+   start netcoal
