--- a/prebuilt/init.broadcomstb.usb.tcp.rc
+++ b/prebuilt/init.broadcomstb.usb.tcp.rc
@@ -6,6 +6,7 @@ on fs
     mkdir /dev/usb-ffs/adb 0770 shell shell
     mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
     write /sys/class/android_usb/android0/f_ffs/aliases adb
+    setprop service.adb.tcp.port 5555
 
 on post-fs-data
     chown system system /sys/class/android_usb/android0/f_mass_storage/lun/file
