--- a/app/BcmSidebandViewer/AndroidManifest.xml
+++ b/app/BcmSidebandViewer/AndroidManifest.xml
@@ -13,6 +13,13 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="BcmSidebandViewer"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.software.leanback" android:required="true" />
