hfrvideo: Add high frame-rate video service
Implement high frame rate video service to adjust system settings
during video playback.  This phase includes temporarily raising
the priority of critical threads in surfaceflinger and nxserver.

refs #SWANDROID-3154

Change-Id: I71f2705f12e9f0128451a9bfc3685fa3016f132b
Signed-off-by: Edwin Chan <edwin.chan@broadcom.com>

--- a/cfgs/init.broadcomstb.rc
+++ b/cfgs/init.broadcomstb.rc
@@ -111,3 +111,11 @@ service gatord /system/bin/gatord
    user root
    oneshot
    disabled
+
+service hfrvideo /system/bin/hfrvideo
+   class late_start
+   oneshot
+   disabled
+
+on property:dyn.nx.hfrvideo.set=*
+   start hfrvideo
