--- a/apks/BcmKeyInterceptor/AndroidManifest.xml
+++ b/apks/BcmKeyInterceptor/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:minSdkVersion="21"
         android:targetSdkVersion="21" />
 
+	<uses-permission android:name="com.netflix.ninja.permission.NETFLIX_KEY"/>
+
     <application
         android:label="@string/app_name" >
 
