--- a/cfgs/init.broadcomstb.usb.configfs.rc
+++ b/cfgs/init.broadcomstb.usb.configfs.rc
@@ -35,3 +35,13 @@ on property:init.svc.adbd=stopped
 on property:sys.usb.config=adb && property:sys.usb.configfs=1
    write /config/usb_gadget/g1/os_desc/use 1
    write /config/usb_gadget/g1/idProduct 0x4E26
+
+on property:sys.usb.config=mtp && property:sys.usb.configfs=1
+   write /config/usb_gadget/g1/functions/mtp.gs0/os_desc/interface.MTP/compatible_id "MTP"
+   write /config/usb_gadget/g1/os_desc/use 1
+   write /config/usb_gadget/g1/idProduct 0x4E27
+
+on property:sys.usb.config=mtp,adb && property:sys.usb.configfs=1
+   write /config/usb_gadget/g1/functions/mtp.gs0/os_desc/interface.MTP/compatible_id "MTP"
+   write /config/usb_gadget/g1/os_desc/use 1
+   write /config/usb_gadget/g1/idProduct 0x4E28
