--- a/cfgs/init.broadcomstb.usb.configfs.rc
+++ b/cfgs/init.broadcomstb.usb.configfs.rc
@@ -34,14 +34,14 @@ on property:init.svc.adbd=stopped
 
 on property:sys.usb.config=adb && property:sys.usb.configfs=1
    write /config/usb_gadget/g1/os_desc/use 1
-   write /config/usb_gadget/g1/idProduct 0x4E26
+   write /config/usb_gadget/g1/idProduct 0x4EE0
 
 on property:sys.usb.config=mtp && property:sys.usb.configfs=1
    write /config/usb_gadget/g1/functions/mtp.gs0/os_desc/interface.MTP/compatible_id "MTP"
    write /config/usb_gadget/g1/os_desc/use 1
-   write /config/usb_gadget/g1/idProduct 0x4E27
+   write /config/usb_gadget/g1/idProduct 0x4EE1
 
 on property:sys.usb.config=mtp,adb && property:sys.usb.configfs=1
    write /config/usb_gadget/g1/functions/mtp.gs0/os_desc/interface.MTP/compatible_id "MTP"
    write /config/usb_gadget/g1/os_desc/use 1
-   write /config/usb_gadget/g1/idProduct 0x4E28
+   write /config/usb_gadget/g1/idProduct 0x4EE2
