cryptfs: enable encryption on device userdata partition.
refs #SWANDROID-2336

Change-Id: Ic69d8fd9ca6cffb28724ebcb7d4220eb8877aa63
Signed-off-by: Pierre Couillaud <pierre.couillaud@broadcom.com>

--- a/cfgs/init.broadcomstb.rc
+++ b/cfgs/init.broadcomstb.rc
@@ -67,6 +67,7 @@ on post-fs-data
    chmod 0644 /data/misc/nexus/nx_key
    export NXCLIENT_PASSWORD /data/misc/nexus/nx_key
 
+   setprop vold.post_fs_data_done 1
    class_start pre_core
 
 on property:dyn.nx.state=loaded
