nxserver: clean up state property; hook up signal handle for SIGTERM.
1) state property is now called 'dyn.nx.state' and fits within the property
framework for nexus integration.

2) cryptfs will send us a SIGTERM (and not SIGHUP as documented!) when the
userdata is being remounted as part of the userdata encryption mechanism,
at that point we need to take action to ensure we free up all fd's owned by
nxserver, or risk being further SIGKILL (forceful attempt to comply).

nexus (nxserver and nexus.ko) do not do well upon SIGKILL restart (to clean
restart we must ensure not only nxserver exit clean, but also all .ko's are
unloaded - however we cannot guarantee unload of .ko within the cryptfs
patience timeout; i.e. cryptfs would simply SIGKILL), so we want to avoid
being in such situation by swiftly responding to the SIGTERM.  luckily, the
only fd held by nexus/nxserver of interest is the nxlogger associated one.

refs #SWANDROID-3280

Change-Id: If1ee53e9eeb0b00ae388066cdd9233825a832eaa
Signed-off-by: Pierre Couillaud <pierre.couillaud@broadcom.com>

--- a/cfgs/init.broadcomstb.rc
+++ b/cfgs/init.broadcomstb.rc
@@ -37,6 +37,7 @@ on post-fs
    export NEXUS_LOGGER_FILE /data/nexus/nexus.log
 
    setprop ro.nx.v3d.no_map_lock 0
+   setprop dyn.nx.state none
    setprop ro.nexus.nxserver.hdcp1x_keys /mnt/hwcfg/drm_hdcp1x.bin
    setprop ro.nexus.nxserver.hdcp2x_keys /mnt/hwcfg/drm.bin
 
@@ -67,7 +68,7 @@ on post-fs-data
 
    class_start pre_core
 
-on property:hw.nexus.platforminit=on
+on property:dyn.nx.state=loaded
    # insmod nx_ashmem driver (gralloc memory support).
    insmod /system/vendor/drivers/nx_ashmem.ko devname="ion" heap_grow="8m"
    class_start main
@@ -85,14 +86,12 @@ service nxserver /system/bin/nxserver
    group system
    socket nxserver stream 0666 root system
    critical
-   oneshot
 
 service hwcbinder /system/bin/hwcbinder
    class pre_core
    user root
    group system media
    critical
-   oneshot
 
 service nxdispfmt /system/bin/nxdispfmt
    class late_start
