cfg: silence chatter from init once boot completed.
in particular, this removes the NOTICE being printed on kernel log
each time a service starts/stops, which can happen quite often when
doing back to back playback (as example).

refs #SWANDROID-3081

Change-Id: I52507a3082228e0c4dbdd5e5af803c915d943408
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/cfgs/init.broadcomstb.rc
+++ b/cfgs/init.broadcomstb.rc
@@ -112,3 +112,6 @@ service hfrvideo /system/bin/hfrvideo
 
 on property:dyn.nx.hfrvideo.set=*
    start hfrvideo
+
+on property:dev.bootcomplete=1
+   setprop sys.init_log_level 4
