bt: Support for Bluetooth via UART
refs #SWANDROID-3288

Change-Id: I5a0c0cbdb82d23c2a9d8ec8d32f3e1b83922b7d4

--- a/conx/btuart/bt_vendor.conf
+++ b/conx/btuart/bt_vendor.conf
@@ -1,5 +1,6 @@
 # UART device port where Bluetooth controller is attached
 UartPort = /dev/ttyS1
 # Firmware patch file location
-FwPatchFilePath = /vendor/broadcom/btusb/firmware
+FwPatchFilePath = /vendor/broadcom/btuart/firmware
+FwPatchFileName = BCM_bt_fw.hcd
 
