Enabled launching from wakeup button
Updated key interceptor and NEXUS IR input driver to launch app after
resuming from deep sleep by the wakeup button.

refs #SWANDROID-3357

Change-Id: Ibe2b5e816679b512e4b6341410d5032d1b6b9f86

--- a/apks/BcmKeyInterceptor/AndroidManifest.xml
+++ b/apks/BcmKeyInterceptor/AndroidManifest.xml
@@ -16,6 +16,10 @@
             <intent-filter>
                  <action android:name="android.intent.action.GLOBAL_BUTTON" />
             </intent-filter>
+            <intent-filter>
+                 <action android:name="com.google.android.leanbacklauncher.action.PARTNER_CUSTOMIZATION" />
+                 <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </receiver>
     </application>
 
