--- a/apks/BcmTVInput/AndroidManifest.xml
+++ b/apks/BcmTVInput/AndroidManifest.xml
@@ -30,12 +30,22 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name"
         android:allowBackup="true"
         android:supportsRtl="true">
-        <activity android:name="com.broadcom.tvinput.TunerSettings">
+        <activity android:name="com.broadcom.tvinput.MainActivity"
+            android:theme="@style/Theme.Example.Leanback.GuidedStep"
+            android:process=":BroadcomTunerService">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+    <activity android:name="com.broadcom.tvinput.TunerSettings">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+    <activity android:name=".SingleScan"/>
         <service android:name="com.broadcom.tvinput.TunerService"
             android:permission="android.permission.BIND_TV_INPUT"
             android:label="@string/tuner_service_label"
