[PM] Spurious BT_HOST_WAKE signal received during boot to S0.5
Part 2 of 3 changes:
===================

Part 1 contains the droid_pm kernel driver changes.
Part 2 contains the Power HAL integration changes.
Part 3 contains the device platform changes (e.g. SELinux).

The problem faced is that when transitioning from S5 to S0.5 from an
alarm timer event, the STB can spuradically wake-up to S0 rather than
remain in S0.5 and later suspend.   Investigations proved that the
BT_HOST_WAKE signal was toggling during Android booting, causing the
Power HAL to believe the STB should fully wake-up.  The BT_HOST_WAKE
signal was toggling prematurely and before the BT stack was fully
initialised (before the BT firmware was loaded).

It was decided that a synchronisation mechanism should exist to allow
the BT stack to indicate to the Power HAL when the BT_HOST_WAKE signal
is valid and can be reacted to (i.e. when to spoof a KEY_WAKEUP event).
Investigations proved that a mechanism already exists within the BT
hardware library whereby the BT_WAKE event can be used to know when the
BT stack is awake or asleep.  During boot, the BT_WAKE signal is only
asserted after the BT stack has loaded.

The next piece in the puzzle was how to communicate this timing event to
the Power HAL without making AOSP modifications.  Fortunately, the
designers of the BT hardware library were wise enough to expose this
functionality and the BT hardware library can be configured to write to
"/proc/bluetooth/sleep/bt_write" to indicate whether the BT_WAKE event
is asserted or deasserted.

The changes in part 2 of this commit provide a generic means by which
software modules (e.g. BT stack) can manage when a GPIO input designated
as a "Wakeup" source is enabled.  The Power HAL mow reacts to the
DROID_PM_EVENT_BT_WAKE_ON event to know "when" to begin enabling any and
all input GPIO's tagged with the "BT" attribute in the "aon_gpio.cfg"
configuration file.

To prevent the shutdown acknowledgement from receiving

--- a/hals/power/aon_gpio.cfg
+++ b/hals/power/aon_gpio.cfg
@@ -1,19 +1,18 @@
 ##################################################################################################
-# This is an example GPIO/AON_GPIO/AON_SGPIO configuration file and is made up of key/value pairs
-# for the GPIO/SGPIO's.  This comprises the name of the GPIO/SGPIO followed by an "=" and
-# additional parameters separated by comma(s) and *NO* whitespace within the square brackets.
-# The parameters are used to inform the software how to configure the GPIO.
-# The first parameter is the "GPIO pin mode" of the pin. The valid values are:
+# The aon_gpio.cfg file is made up of key/value pairs for the GPIO/AON_GPIO/AON_SGPIO's.
+# This comprises the name of the GPIO/SGPIO followed by an "=" and additional parameters
+# separated by comma(s) and no whitespace within square brackets.  The parameters are
+# used to inform the software how to configure the GPIO.  The first parameter is the
+# "GPIO mode" of the pin.  The valid values are:
 #
 #  1) "Input"     --> an input pin
 #  2) "PushPull"  --> a totem-pole output
 #  3) "OpenDrain" --> an open-drain output
 #
-# The second and subsequent parameters depends on whether the GPIO is configurred as an "input"
-# or "output".
+# The following parameters depend on whether the GPIO is configured as an "input" or "output".
 #
-# If the pin is configured as an input, then the second (and final) parameter is used to indicate
-# the type of "interrupt mode".  The valid value are:
+# If the pin is configured as an input, then the second parameter is used to indicate the type
+# of "interrupt mode".  The valid values are:
 #
 #  1) Disabled    --> no interrupt will be generated.
 #  2) RisingEdge  --> an interrupt will be generated on a rising edge  (i.e. low-->high).
@@ -22,9 +21,24 @@
 #  5) High        --> an interrupt will be generated on a high level.
 #  6) Low         --> an interrupt will be generated on a low level.
 #
-# If the pin is configurred as an output, then the following 6 (and only 6) parameters are used
-# to indicate the polarity of the output signal in power states S0 through to S5 (note S4 is not
-# used at this current time).  The valid values are:
+# The third argument for an input pin is optional. If present, the valid values are:
+#
+#  1) None        --> (default) no key input events will be generated on an interrupt
+#  2) Wakeup      --> a KEY_WAKEUP sequence will be generated on an interrupt
+#
+# A fourth argument for an input pin is optional and only present if the third argument is
+# present and set to "Wakeup".  It indicates whether the Power HAL should wait for a
+# particular event before configuring the input pin as a wake-up source.  If this fourth
+# argument is present the valid value are:
+#  1) None        --> (default) the input pin will be configured immediately by the Power HAL.
+#  2) BT          --> the input pin will be configured only after the BT stack has loaded.
+#
+# This fourth argument is useful in preventing spurious wake-ups when the system is booting
+# to a sleep state (e.g. from S5 to S0.5).
+#
+# If the pin is configured as an output, then the following 6 parameters are used to indicate
+# the polarity of the output signal in power states S0, S0.5, S1, S2, S3, S4, S5 (note S4 is
+# not used at this current time).  The valid values are:
 #
 #  1) High
 #  2) Low
@@ -32,23 +46,27 @@
 # Below are some examples of both input and output GPIO configurations.
 #
 #  Example1: GPIO101 = [PushPull,High,Low,Low,Low,Low,Low,High]
-#            So this configures GPIO_101 as a totem-pole output which is driven HIGH during S0,
-#            LOW during states S0.5 to S4 and HIGH again for state S5
+#            This configures GPIO_101 as a totem-pole output which is driven HIGH during S0,
+#            LOW during states S0.5 to S4 and HIGH again for state S5.
 #
 #  Example2: AON_GPIO01 = [Input,FallingEdge]
-#            This configures AON_GPIO_01 as a negative edge triggered input
+#            This configures AON_GPIO_01 as a negative edge triggered input.
 #
-#  Example3: AON_SGPIO02 = [Input,Edge]
-#            this configures AON_SGPIO_02 as any edge triggered input
+#  Example3: AON_SGPIO02 = [Input,Edge,Wakeup]
+#            This configures AON_SGPIO_02 as any edge triggered input, generating wakeup key
+#            events.
 #
-#  Example4: AON_GPIO00 = [PushPull,High,High,Low,Low,Low,Low,Low]
-#            So this configures AON_GPIO_00 as a totem-pole output which is driven HIGH during S0
+#  Example4: AON_GPIO17 = [Input,FallingEdge,Wakeup,BT]
+#            This configures AON_GPIO_17 as a negative edge triggered input, generating wakeup key
+#            events and enabled only after the BT stack has loaded.
+#
+#  Example5: AON_GPIO00 = [PushPull,High,High,Low,Low,Low,Low,Low]
+#            This configures AON_GPIO_00 as a totem-pole output which is driven HIGH during S0
 #            and S0.5 states and LOW in the other standby states S1 to S5.
 #
-#  Example5: AON_GPIO03 = [OpenDrain,Low,High,High,High,High,High,High]
-#            So this configures AON_GPIO_03 as an open-drain output which is driven LOW during S0
+#  Example6: AON_GPIO03 = [OpenDrain,Low,High,High,High,High,High,High]
+#            This configures AON_GPIO_03 as an open-drain output which is driven LOW during S0
 #            and HIGH in all other standby states S0.5 to S5.
-#
 ##################################################################################################
 
 # Configure AON_GPIO #2 as falling/negative edge interrupt triggered
