init.rc: remount tracefs with correct permissions
With the newer kernels, /sys/kernel/debug/tracing is a seperate
tracefs mount which defaults to 0700 permissions. This change
remounts tracing with the correct 0755 permissions.

refs #SWANDROID-3573

Change-Id: I1c5f8b61bd44da6e42c1a9d627a6e8a3a1455f7d
Signed-off-by: Danesh Petigara <danesh.petigara@broadcom.com>

--- a/cfgs/init.broadcomstb.rc
+++ b/cfgs/init.broadcomstb.rc
@@ -44,6 +44,8 @@ on post-fs
    # Allow Launcher wallpaper picker to use landscape mode
    setprop log.tag.launcher_force_rotate VERBOSE
 
+   mount tracefs tracefs /sys/kernel/debug/tracing remount mode=755
+
 on post-fs-data
    mkdir /data/media 0770 media_rw media_rw
    mkdir /data/nxmedia 0770 media media
