hfrvideo: Fixed proc entries reading issue
refs #SWANDROID-3398

Change-Id: I45a7422bd76a87bd5d1f61dccacc4ad44c28c972

--- a/misc/hfrvideo/hfrvideo.rc
+++ b/misc/hfrvideo/hfrvideo.rc
@@ -1,6 +1,7 @@
 service hfrvideo /system/bin/hfrvideo
    class late_start
    oneshot
+   group root readproc
    disabled
 
 on property:dyn.nx.hfrvideo.set=*
