bcm-integration: moving vendor things into vendor.img.
refs #SWANDROID-3752

Change-Id: I7e59b6df43aa7715aab40a938512c8785adc219c
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/conx/nic-dual/init.brcm_nic.rc
+++ b/conx/nic-dual/init.brcm_nic.rc
@@ -17,7 +17,7 @@ on post-fs-data
     mkdir /data/misc/android 0770 wifi wifi
 
 on property:dyn.nx.state=loaded
-    insmod /system/vendor/broadcom/nic/driver/wl.ko
+    insmod /vendor/lib/modules/wl.ko
     setprop wifi.interface wlan0
     setprop wlan.driver.status "ok"
 
