--- a/nxif/nxdispfmt/nxdispfmt.rc
+++ b/nxif/nxdispfmt/nxdispfmt.rc
@@ -1,7 +1,7 @@
 on property:dyn.nx.vidout.set=1
    start nxdispfmt
 
-service nxdispfmt /system/bin/nxdispfmt
+service nxdispfmt /vendor/bin/nxdispfmt
    class late_start
    oneshot
    disabled
