hdmiin: update functionaliy to match nxclient hdmi_input
refs #SWANDROID-3728

Change-Id: Ic9db61fa5ce1e28aa1bc4951f042337441b1934f

--- a/apks/BcmHdmiTvInput/AndroidManifest.xml
+++ b/apks/BcmHdmiTvInput/AndroidManifest.xml
@@ -18,6 +18,7 @@
     package="com.broadcom.tvinput.hdmiservice">
 
     <uses-permission android:name="android.permission.TV_INPUT_HARDWARE" />
+    <uses-permission android:name="com.android.tv.permission.RECEIVE_INPUT_EVENT" />
     <uses-permission android:name="android.permission.HDMI_CEC" />
     <uses-permission android:name="com.android.providers.tv.permission.READ_EPG_DATA" />
 
