--- a/apks/BcmAdjustScreenOffset/AndroidManifest.xml
+++ b/apks/BcmAdjustScreenOffset/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.adjustScreenOffset"
-    android:versionCode="1"
-    android:versionName="1.0" >
-    <uses-sdk android:minSdkVersion="10" />
+    package="com.broadcom.BcmAdjustScreenOffset">
+    <uses-sdk android:minSdkVersion="21" />
 
     <application
         android:icon="@drawable/ic_launcher"
+        android:banner="@drawable/ic_adjust_screen_offset_banner"
         android:label="@string/app_name" >
         <activity
             android:name=".BcmAdjustScreenOffsetActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
+    <uses-feature android:name="android.software.leanback" android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 </manifest>
