--- a/apks/BcmSidebandViewer/AndroidManifest.xml
+++ b/apks/BcmSidebandViewer/AndroidManifest.xml
@@ -4,24 +4,18 @@
 
     <application android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:banner="@drawable/banner"
+        android:banner="@drawable/ic_sideband_viewer_banner"
         android:theme="@style/AppTheme">
         <activity android:name="BcmSidebandViewer"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name="BcmSidebandViewer"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.software.leanback" android:required="true" />
+    <uses-feature android:name="android.software.leanback" android:required="false" />
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 </manifest>
