--- a/apks/BcmUriPlayer/AndroidManifest.xml
+++ b/apks/BcmUriPlayer/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/ic_launcher"
-                 android:banner="@drawable/banner"
+                 android:banner="@drawable/ic_uri_player_banner"
                  android:label="@string/app_name">
         <activity android:name=".BcmUriPlayer"
                   android:label="@string/app_name">
@@ -21,6 +21,8 @@
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.software.leanback" android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
     <uses-sdk android:minSdkVersion="8" />
 
 </manifest> 
