bcmsplash: Fixed bad cases with netflix launching at wrong times
refs #SWANDROID-3501

Change-Id: Id258b09a509573d29d291c9d6a82cae429a6025b
Signed-off-by: Derek Smith <derek.smith@broadcom.com>

--- a/apks/BcmSplash/AndroidManifest.xml
+++ b/apks/BcmSplash/AndroidManifest.xml
@@ -11,5 +11,12 @@
                   android:noHistory="true"
                   android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         </activity>
+        <receiver android:name=".BcmSplashReceiver"
+                  android:enabled="true"
+                  android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
