vendor: o-sync up 19.04.
Change-Id: Ief755b613105a30cd29d7068f05bed8f49179a41
Signed-off-by: Pierre Couillaud <pierre.couillaud@broadcom.com>

--- a/hals/gpu/build.gradle
+++ b/hals/gpu/build.gradle
@@ -1,6 +1,17 @@
 android {
+    signingConfigs {
+        release {
+            storeFile file(gfxdriver-bcmstb.jks)
+            storePassword "broadcom"
+            keyAlias "gfxdriver-key"
+            keyPassword "broadcom"
+        }
+    }
     defaultConfig {
-        versionCode 1
-        versionName "1.0"
+        versionCode 1000000
+        versionName "initial"
+        signingConfig signingConfigs.release
+        minSdkVersion 25
+        targetSdkVersion 25
     }
 }
