--- a/hals/gpu/AndroidManifest.xml
+++ b/hals/gpu/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-   package="com.broadcom.generic.gfxdriver.default">
+   package="com.broadcom.generic.gfxdriver.default" android:minSdkVersion="25" android:targetSdkVersion="25">
 
    <application
        android:label="gpu driver for broadcom stb"
