custom: Combine BcmSplash with BcmCustomizer
When partner splash screen is displayed, the NETFLIX_KEY events should not
be broadcasted.  Combining the BcmSplashActivity into the BcmCustomizer
allows the events to be coordinated without worrying about LMK killing one
or the other process.

refs #SWANDROID-3973

Change-Id: I141e9d2d69c518cc6fe2bea300419720c0c3a529
Signed-off-by: Edwin Chan <edwin.chan@broadcom.com>

--- a/apks/BcmCustomizer/base/AndroidManifest.xml
+++ b/apks/BcmCustomizer/base/AndroidManifest.xml
@@ -19,6 +19,16 @@
             <intent-filter>
                 <action android:name="android.intent.action.GLOBAL_BUTTON" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="com.broadcom.customizer.SPLASH_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
         </receiver>
+        <activity android:name=".BcmSplashActivity"
+                  android:label="@string/app_label"
+                  android:excludeFromRecents="true"
+                  android:noHistory="true"
+                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+        </activity>
     </application>
 </manifest>
