--- a/apks/BcmCustomizer/base/AndroidManifest.xml
+++ b/apks/BcmCustomizer/base/AndroidManifest.xml
@@ -8,8 +8,6 @@
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.netflix.ninja.permission.NETFLIX_KEY" />
 
     <application android:label="@string/app_label">
@@ -19,26 +17,18 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED" />
-                <action android:name="android.intent.action.PACKAGE_REMOVED" />
-                <data android:scheme="package" />
-            </intent-filter>
-            <intent-filter>
                 <action android:name="android.intent.action.GLOBAL_BUTTON" />
             </intent-filter>
-        </receiver>
-        <receiver android:name=".ClockWidgetProvider" >
             <intent-filter>
-                <action android:name="android.net.conn.INET_CONDITION_ACTION" />
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.broadcom.customizer.SPLASH_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/clock_widget_info" />
         </receiver>
-
+        <activity android:name=".BcmSplashActivity"
+                  android:label="@string/app_label"
+                  android:excludeFromRecents="true"
+                  android:noHistory="true"
+                  android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+        </activity>
     </application>
 </manifest>
