--- a/apks/BcmCustomizer/base/AndroidManifest.xml
+++ b/apks/BcmCustomizer/base/AndroidManifest.xml
@@ -13,6 +13,10 @@
     <application android:label="@string/app_label">
         <receiver android:name=".BcmCustomizerReceiver">
             <intent-filter>
+                <action android:name="android.support.v17.leanback.action.PARTNER_CUSTOMIZATION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
                 <action android:name="com.google.android.leanbacklauncher.action.PARTNER_CUSTOMIZATION" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
