--- a/conx/nic/init.brcm_nic.rc
+++ b/conx/nic/init.brcm_nic.rc
@@ -17,6 +17,7 @@ on post-fs-data
     mkdir /data/misc/android 0770 wifi wifi
 
 on property:dyn.nx.state=loaded
+    insmod /vendor/lib/modules/wlplat.ko
     insmod /vendor/lib/modules/wl.ko
     setprop wifi.interface wlan0
     setprop wlan.driver.status "ok"
@@ -27,7 +28,7 @@ service p2p_supplicant /vendor/bin/hw/wpa_supplicant \
     -I/system/etc/wifi/p2p_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets \
     -puse_p2p_group_interface=1p2p_device=1 \
-    -g@android:wpa_wlan0
+    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
@@ -40,7 +41,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets \
-    -g@android:wpa_wlan0
+    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
