--- a/conx/dhd/init.brcm_dhd.rc
+++ b/conx/dhd/init.brcm_dhd.rc
@@ -15,6 +15,9 @@ on post-fs-data
     chown wifi wifi /data/misc/wifi/wpa_supplicant.conf
 
     mkdir /data/misc/android 0770 wifi wifi
+    mkdir /data/vendor/wifi 0770 wifi wifi
+    mkdir /data/vendor/wifi/wpa 0770 wifi wifi
+    mkdir /data/vendor/wifi/wpa/sockets 0770 wifi wifi
 
 on property:dyn.nx.state=loaded
     insmod /vendor/lib/modules/bcmdhd.ko
@@ -36,9 +39,8 @@ service p2p_supplicant /vendor/bin/hw/wpa_supplicant \
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
+
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets \
     -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
