customizer: renamed intent to match launcher package.
refs #SWANDROID-4848

Change-Id: I8f13889dd64d12c0eb50b8113a7cd293d8f4d437
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>
(cherry picked from commit 7717061323906872a5c58c38ec12605872faed8a)

--- a/apks/BcmCustomizer/base/AndroidManifest.xml
+++ b/apks/BcmCustomizer/base/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.google.android.leanbacklauncher.action.PARTNER_CUSTOMIZATION" />
+                <action android:name="com.google.android.tvlauncher.action.PARTNER_CUSTOMIZATION" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
