vendor: sync up to 01.06.2018.
Change-Id: I74605c912c4714af45fca1d39b932aab8abc6bd2

--- a/nxif/nxserver/nxserver.nvi.rc
+++ b/nxif/nxserver/nxserver.nvi.rc
@@ -1,7 +1,7 @@
 service nxserver /system/vendor/bin/nxserver
    class core
    user root
-   group system
+   group system inet
    socket nxserver stream 0666 root system
    critical
 
