--- a/apks/BcmSidebandViewer/AndroidManifest.xml
+++ b/apks/BcmSidebandViewer/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.broadcom.sideband">
 
-    <application android:label="@string/app_name"
+    <application
         android:icon="@drawable/ic_launcher"
         android:banner="@drawable/ic_sideband_viewer_banner"
-        android:theme="@style/AppTheme">
+        android:label="@string/app_name" >
         <activity android:name="BcmSidebandViewer"
             android:label="@string/app_name">
             <intent-filter>
