--- a/apks/BcmTVInput/AndroidManifest.xml
+++ b/apks/BcmTVInput/AndroidManifest.xml
@@ -6,6 +6,9 @@
         android:name="android.software.leanback"
         android:required="false" />
     <uses-feature
+        android:name="android.software.live_tv"
+        android:required="true" />
+    <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
 
@@ -18,13 +21,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Leanback">
+        android:icon="@drawable/ic_launcher"
+        android:banner="@drawable/ic_tv_input_banner"
+        android:label="@string/app_name" >
         <service
-            android:name="BcmTvTunerService"
-            android:label="Hardware TV Tuner"
+            android:name=".BcmTvTunerService"
+            android:label="Broadcom TV Tuner"
             android:permission="android.permission.BIND_TV_INPUT">
             <intent-filter>
                 <action android:name="android.media.tv.TvInputService" />
