hals:dpthak: hfrvideo shuffling (iii).
missed capability setting for dpthak service.

refs #SWANDROID-5089

Change-Id: I47e6c21a12ae55ab6f9ecded59da344d2906e114
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/hals/dpthak/1.0/default/bcm.hardware.dpthak@1.0-service.rc
+++ b/hals/dpthak/1.0/default/bcm.hardware.dpthak@1.0-service.rc
@@ -2,4 +2,4 @@ service dpthak-hal-1-0 /vendor/bin/hw/bcm.hardware.dpthak@1.0-service
     class hal
     user system
     group system inet
-    capabilities NET_ADMIN
+    capabilities NET_ADMIN SYS_NICE
