--- a/apks/BcmBP3Config/AndroidManifest.xml
+++ b/apks/BcmBP3Config/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:banner="@drawable/ic_bp3_config_banner"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:windowSoftInputMode="adjustPan" >
         <activity android:name=".BP3Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
