--- a/hals/bp3/1.0/default/bcm.hardware.bp3@1.0-service.rc
+++ b/hals/bp3/1.0/default/bcm.hardware.bp3@1.0-service.rc
@@ -2,3 +2,5 @@ service bp3-hal-1-0 /vendor/bin/hw/bcm.hardware.bp3@1.0-service
     class hal
     user system
     group system
+    capabilities NET_ADMIN NET_RAW
+
