vendor: nuke dependency on property trigger for loading wifi driver.
use a wait on property instead which is available and which is what
we want here.

this allows to remove the exception made to proper conformance for
device first shipping with P API level.

refs #SWANDROID-5466

Change-Id: Ie96fce84f69679baf67a72a0fede116566f65e15
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>
Signed-off-by: Pierre Couillaud <pierre.couillaud@broadcom.com>

--- a/conx/dhd/init.brcm_dhd.rc
+++ b/conx/dhd/init.brcm_dhd.rc
@@ -1,15 +1,13 @@
 on post-fs-data
-    # wifi
     mkdir /data/vendor/wifi 0770 wifi wifi
     mkdir /data/vendor/wifi/wpa 0770 wifi wifi
     mkdir /data/vendor/wifi/wpa/sockets 0770 wifi wifi
 
-on property:dyn.nx.state=loaded
+on post-fs
+    wait_for_prop dyn.nx.state memcfg
     insmod /vendor/lib/modules/bcmdhd.ko
     setprop wifi.interface wlan0
     setprop wlan.driver.status "ok"
-
-on boot
 
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     -O/data/vendor/wifi/wpa/sockets \
