nxserver: Add wakelock group
Add nxserver to the wakelock group, to allow access to
/sys/power/wake_lock.

refs #SWANDROID-5525

Change-Id: If0cd2185654c6b76cccd6db619592d70cd8e2c17

--- a/nxif/nxserver/nxserver.rc
+++ b/nxif/nxserver/nxserver.rc
@@ -1,7 +1,7 @@
 service nxserver /vendor/bin/nxserver
    class core
    user root
-   group system inet
+   group system inet wakelock
    critical
 
 
