--- a/apks/BcmCustomizer/AndroidManifest.xml
+++ b/apks/BcmCustomizer/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.netflix.ninja.permission.NETFLIX_KEY" />
+    <uses-permission android:name="com.google.android.tv.permission.CUSTOMIZE_TV_APP" />
 
     <application android:label="@string/app_label">
         <receiver android:name=".GlobalKeyReceiver">
