Netflix: detect and report ATMOS capability
Reflect ATMOS support from HDMI_AUDIO_PLUG intent to NRDP global setting.

refs #SWANDROID-5653

Change-Id: I80a6374d8c250ea64c6ebe083cf63dd579c45f92
Signed-off-by: Edwin Chan <edwin.chan@broadcom.com>

--- a/apks/BcmCustomizer/AndroidManifest.xml
+++ b/apks/BcmCustomizer/AndroidManifest.xml
@@ -28,6 +28,11 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <service android:name=".HdmiAudioPlugService">
+            <intent-filter>
+                <action android:name="android.media.action.HDMI_AUDIO_PLUG" />
+            </intent-filter>
+        </service>
         <activity android:name=".SplashActivity"
                   android:label="@string/app_label"
                   android:excludeFromRecents="true"
