audio: Force PCM mode when surround output is set to Never
Implement forcedPCM functionality in Nexus service, and add
HDMI hotplug listener to BcmCustomizer to respond to surround
output setting changes.

refs #SWANDROID-5851

Change-Id: I96a524de49a76baf596bdf8cab96db637b1c1fb4
Signed-off-by: Edwin Chan <edwin.chan@broadcom.com>

--- a/apks/BcmCustomizer/AndroidManifest.xml
+++ b/apks/BcmCustomizer/AndroidManifest.xml
@@ -44,6 +44,11 @@
                 <action android:name="com.google.android.tvlauncher.action.PARTNER_CONFIGURATION" />
             </intent-filter>
         </receiver>
+        <service android:name=".HdmiAudioPlugService">
+            <intent-filter>
+                <action android:name="android.media.action.HDMI_AUDIO_PLUG" />
+            </intent-filter>
+        </service>
         <provider android:name=".ConfigurationProvider"
             android:authorities="tvlauncher.config"
             android:enabled="true"
