vendor: nic-driver: instantiate nvram paths for wlan driver.
refs #SWANDROID-5926

Change-Id: I48f4d70eef1383350047593d74f484959d2f53f2
Signed-off-by: Pierre Couillaud <pierre.couillaud@broadcom.com>

--- a/conx/nic/init.brcm_nic.rc
+++ b/conx/nic/init.brcm_nic.rc
@@ -6,7 +6,9 @@ on post-fs-data
 on post-fs
     wait_for_prop dyn.nx.state memcfg
     insmod /vendor/lib/modules/wlplat.ko
-    insmod /vendor/lib/modules/wl.ko
+    insmod /vendor/lib/modules/wl.ko \
+       nvram_path=/dev/hwcfg/nvm.txt \
+       board_nvram_path=/vendor/broadcom/nvrams/nvram.txt
     setprop wifi.interface wlan0
     setprop wlan.driver.status "ok"
 
