--- a/conx/nic/init.brcm_nic.rc
+++ b/conx/nic/init.brcm_nic.rc
@@ -3,8 +3,7 @@ on post-fs-data
     mkdir /data/vendor/wifi/wpa 0770 wifi wifi
     mkdir /data/vendor/wifi/wpa/sockets 0770 wifi wifi
 
-on post-fs
-    wait_for_prop dyn.nx.state memcfg
+on property:vendor.nx.wifi.trigger=init
     insmod /vendor/lib/modules/wlplat.ko
     insmod /vendor/lib/modules/wl.ko \
        nvram_path=/dev/hwcfg/nvm.txt \
