hals: dpthak: allow service to read /proc entries.
refs #SWANDROID-5948

Change-Id: I5c6532608d517cf97283a0cca9d9cabf8a3a5387
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/hals/dpthak/1.0/default/bcm.hardware.dpthak@1.0-service.rc
+++ b/hals/dpthak/1.0/default/bcm.hardware.dpthak@1.0-service.rc
@@ -1,5 +1,5 @@
 service dpthak-hal-1-0 /vendor/bin/hw/bcm.hardware.dpthak@1.0-service
     class hal
     user system
-    group system inet
+    group system inet readproc
     capabilities NET_ADMIN SYS_NICE
